refactor: pass flags to UIAction constructors and add factory methods
Phases 1-4 of the UIAction constructor refactor:
- Add Flag... flags to all UIAction constructor chains (phases 1-2)
- Add static factory methods and private constructors to all action
  classes; update all callers in Actions.java, InsertMenu, NotationMenu,
  MenuController, PlaybackController (phase 3)
- Update all test files to use factory methods instead of direct
  constructor calls; add saveActionStates/restoreActionStates calls to
  ReflectionTestHelper; fix assertion in ReflectionIntegrationTest to
  correctly expect crotchet rests to match the crotchet duration action
  (phase 4)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>